--- a/historia.html
+++ b/historia.html
@@ -30,15 +30,18 @@
        </div>
    </header>
        <div class="historia">
-                   <ul>
+                       <ul>
                        <li>Años 50. Aquí se encuentran los orígenes de Nike, momento en que el entrenador de atletismo, Bill Bowerman quiso innovar el calzado de los atletas. Con la ayuda de Phil Knight empezó a relacionarse con marcas de Japón para poder hacerlo.</li>
                        <li> En los 60 se crea la sociedad Blue Ribbon Sports, una distribuidora de calzado deportivo de marca japonesa Onitsuka Tiger.</li>
+                       <img class="timeline" src="IMAGES/naik2.gif" alt="">
                        <li>Diferencias con la marca japonesa supusieron que a principios de los 70 Bill Bowerman y Phil Knight empezaran a diseñar y fabricar su propia marca de zapatillas, Nike, que significa diosa alada de la victoria.En 1971 nace el popular logo creado por Carolyn Davidson, que representa el ala de la diosa Nike. En 1972 las nuevas zapatillas Nike debutan en las pruebas de atletismo de los EE.UU.</li>
                        <li>Década de los 80. Nike empieza por todo lo alto estos años gracias al éxito de la tecnología Nike Air que lleva Michael Jordan en sus zapatillas. En 1987 la empresa quiere liderar la industria y lo hace con las Air Max: las primeras zapatillas Nike que hacen visibles las cámaras de aire. Un año más tarde la marca lanza su lema más famoso, Just Do It.</li>
+                       <img class="timeline" src="IMAGES/nike2.gif" alt="">
                        <li>En los 90 Nike firma contratos con jugadores de la selección de Brasil de fútbol y también con una joven promesa del golf llamada “Tiger” Woods.</li>
                        <li>En 2002, en la Copa del Mundo, Nike pone en marcha su primera campaña de marketing a nivel global llamada “Secret Tournament”, que combina la fórmula gran atleta, gran anuncio y gran producto.</li>
+                         <img class="timeline" src="IMAGES/nike3.gif" alt="">
                        <li>En la actualidad, Nike continúa desarrollando sus zapatillas, innovando las más icónicas y ofreciendo lo que mejor saber hacer a todos los seguidores de la marca.</li>
-                   </ul>
+                       </ul>
        </div>
     
     
