--- a/quienessomos.html
+++ b/quienessomos.html
@@ -34,12 +34,12 @@
         <seccion id="lo-mas-vendido">
                 <div class="contenedor">
                    <h3> ¿QUIENES SOMOS?</h3>
-                    <div class="contenedor-masvendido">
-                           <div class="banners">
-                           <img  class="banner" src="IMAGES/banner1.jpg" alt="">
+                    <div class="contenedor-quienessomos">
+                           <div class="quienessomos">
+                           <img  class="banner" src="IMAGES/banner7.gif" alt="">
                          </div>
                             <div class="texto">
-                            Nike, Inc. Es una empresa multinacional estadounidense dedicada al diseño, desarrollo, fabricación y comercialización de calzado, ropa, equipo, accesorios y otros artículos deportivos.
+                            En Nike, Inc. Somos empresa multinacional estadounidense dedicada al diseño, desarrollo, fabricación y comercialización de calzado, ropa, equipo, accesorios y otros artículos deportivos.
                             <br>Nuestra misión es lo que nos impulsa a hacer todo lo posible para expandir el potencial humano. 
                             <br>Lo hacemos al crear innovaciones deportivas innovadoras, al hacer que nuestros productos sean más sostenibles, al construir un equipo global creativo y diverso y al tener un impacto positivo en las comunidades donde vivimos y trabajamos.
 
