--- a/contactos.html
+++ b/contactos.html
@@ -38,7 +38,7 @@
           <div class="contenedor-contactos">
                 <div class="item">
                   <ul>
-                  <li><img src="IMAGES/facebook.png" alt=""></li>
+                  <li><a href="https://www.facebook.com/nike"></a><img src="IMAGES/facebook.png" alt=""></li>
                   <li>https://facebook.com/nike
                   </li>
                   </ul>
@@ -46,15 +46,15 @@
                 
                 <div class="item">
                   <ul>
-                  <li><img src="IMAGES/insta.png" alt=""></li>
-                  <li>https://www.instagram.com/nike
+                  <li><a href="https://www.instagram.com/nike"><img src="IMAGES/insta.png" alt=""></a></li>
+                  <li>https://instagram.com/nike
                   </li>
                   </ul>
                 </div>
                 
                 <div class="item">
                   <ul>
-                  <li><img src="IMAGES/twitter.png" alt=""></li>
+                  <li><a href="https://www.twitter.com/nike"><img src="IMAGES/twitter.png" alt=""></a></li>
                   <li>https://twitter.com/nike
                   </li>
                   </ul>
