--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                              <p ><b class="titulobanner">NIKE CRECE CONTIGO</b></p>
                              <p>¡En Nike nos preocupamos por llevarte los mejores productos! 
                              <br>Buscamos siempre innovar y eso no has llevado a buscar alternativas sostenibles, sin perder el toque deportivo que nos caracteriza en cada uno de nuestros tenis,playeras, calcetas, mayas, y cientos de productos que tenemos a la venta para ti</p>
-                            <a href="catalogo.html">VE NUESTROS PRODUCTOS</a>
+                            <a class="button" href="catalogo.html">VE NUESTROS PRODUCTOS</a>
                             </div>    
                  </div>
                 </div>
@@ -53,7 +53,7 @@
                              <p ><b class="titulobanner">¿COMO HACEMOS TENIS TAN COOL´S?</b></p> 
                              <p>Sabemos que nuestros clientes siempre han querido saber como se elaboran los Air Force 1 que llevan a sus entrenamientos, o como hacemos los Air Max 90 que ocupan para salir con sus amigos.
                              <br>Por esa razón incluimos una seccion especial para que conozcan el proceso de crear un tenis.</p>
-                            <a href="elaboracion.html">CONOCE COMO CREAMOS NUESTROS TENIS</a>
+                            <a  class="button" href="elaboracion.html">CONOCE COMO CREAMOS NUESTROS TENIS</a>
                             </div> 
                             <div class="banners">
                            <img class="banner" src="IMAGES/banner4.gif" alt="">
