--- a/productos.html
+++ b/productos.html
@@ -41,7 +41,7 @@
                              <p ><b class="titulobanner">T-SHIRTS</b></p>
                              <p>Ya sea para hacer ejercicio o para usar casualmente 
                              <br>¡Tenemos las mejores playeras para ti!</p>
-                            <a href="ropa.html">CHECA NUESTRAS PLAYERAS</a>
+                            <a  class="button" href="ropa.html">CHECA NUESTRAS PLAYERAS</a>
                             </div>    
                  </div>
                 </div>
@@ -52,7 +52,7 @@
                              <p ><b class="titulobanner">SHORTS</b></p> 
                              <p>¿Estas listo para dar correr por lo que quieres?
                              <br>Nuestros shorts te proporcionan comodidad y un buen look, ¡100% asegurado!
-                            <br><a href="ropa.html">MIRA LOS SHORTS QUE TENEMOS PARA TI</a></p>
+                            <br><a  class="button" href="ropa.html">MIRA LOS SHORTS QUE TENEMOS PARA TI</a></p>
                             </div> 
                             <div class="banners">
                            <img class="productos" src="IMAGES/productos2.gif" alt="">
@@ -69,8 +69,8 @@
                             <div class="texto1">
                              <p ><b class="titulobanner">TENNIS</b></p>
                              <p>¡Queremos que tengas la mejor calidad en tus pies! 
-                             <br>Aparte de ver todos los tennis que tenemos para ti, puedes conocer como los elaboramos <a href="elaboracion.html">dando click aquí</a></p>
-                            <a href="tenis.html">DEBERIAS VER NUESTROS TENNIS</a>
+                             <br>Aparte de ver todos los tennis que tenemos para ti, puedes conocer como los elaboramos <a class="button" href="elaboracion.html"><b>dando click aqui</b></a></p>
+                            <a  class="button" href="tenis.html">DEBERIAS VER NUESTROS TENNIS</a>
                             </div>    
                  </div>
                 </div>
@@ -81,7 +81,7 @@
                              <p ><b class="titulobanner">CALCETAS</b></p> 
                              <p>Nada mejor para combinar con tus tennis Nike que un buen par de calcetas!
                              </p>
-                            <a href="ropa.html">CONOCE NUESTRAS CALCETAS</a>
+                            <a  class="button" href="ropa.html">CONOCE NUESTRAS CALCETAS</a>
                             </div> 
                             <div class="banners">
                            <img class="productos" src="IMAGES/productos4.gif" alt="">
